cc_deny/local/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          scheme_header_transformation:
            scheme_to_overwrite: https
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: httpbin
          http_filters:
          - name: wasmdemo
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: wasmdemo
                  vm_config:
                    vm_id: "cc_deny"
                    runtime: envoy.wasm.runtime.v8
                    code:
                      local:
                        filename: /etc/envoy/main.wasm
                  configuration:
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    # 插件配置，是一个 json 字符串
                    value: |
                      {
                        "cc_rules": [
                          {
                            "header": "hd1",
                            "qpm": 3,
                            "block_seconds": 0.9
                          },
                          {
                            "cookie": "uid",
                            "qps": 2,
                            "block_seconds": 0.1
                          },
                          {
                            "cookie": "uid2",
                            "qpm": 60
                          },
                          {
                            "cookie": "uid3",
                            "qps": 100
                          },
                          {
                            "cookie": "uid4",
                            "qps": 100
                          },
                          {
                            "cookie": "uid5",
                            "qps": 100
                          },
                          {
                            "cookie": "uid6",
                            "qps": 100
                          },
                          {
                            "cookie": "uid7",
                            "qps": 100
                          },
                          {
                            "cookie": "uid8",
                            "qps": 100
                          },
                          {
                            "cookie": "uid9",
                            "qps": 100
                          },
                          {
                            "cookie": "uid10",
                            "qpm": 10
                          }
                        ]
                      }
          - name: envoy.filters.http.router

  clusters:
  - name: httpbin
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin
                port_value: 80
